--- a/build.gradle
+++ b/build.gradle
@@ -19,15 +19,22 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'org.postgresql:postgresql'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.3'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.6.3'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.6.3'
+	compileOnly 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.3'
+	runtimeOnly 'org.postgresql:postgresql:42.3.2'
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.3'
+	implementation 'org.springframework.security:spring-security-test:5.5.1'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
+	testImplementation 'org.hamcrest:hamcrest:2.2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 tasks.named('test') {
