--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.6.3'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+	implementation 'org.springframework.boot:spring-boot-starter-mail:2.6.5'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.3'
 	runtimeOnly 'org.postgresql:postgresql:42.3.2'
 	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.3'
