--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,34 @@
+#DataBase
+spring.datasource.url=jdbc:postgresql://localhost:5432/managerPass
+spring.datasource.jdbc-url=${spring.datasource.url}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=Ne789sterow
 
+#JPA/Hibernate
+spring.jpa.hibernate.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+
+# App Properties
+app.jwtSecret= SecretNikita
+app.jwtExpirationMs= 86400000
+
+server.port=8082
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.port=465
+spring.mail.username=nesterow14@yandex.ru
+spring.mail.password=hfudtslmnyeventh
+spring.mail.protocol=smtps
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.properties.mail.smtp.starttls.enable=true
