--- a/build.gradle
+++ b/build.gradle
@@ -19,24 +19,25 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.3'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	implementation 'javax.validation:validation-api:2.0.1.Final'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.6.3'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.6.3'
-	compileOnly 'org.projectlombok:lombok:1.18.22'
-	annotationProcessor 'org.projectlombok:lombok:1.18.22'
-	implementation 'org.apache.commons:commons-text:1.9'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.6.3'
+	implementation group: 'io.jsonwebtoken' , name: 'jjwt', version:'0.9.1'
+	implementation group: 'javax.validation', name:'validation-api', version: '2.0.1.Final'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web:2.6.3' , version: '2.6.3'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest' , version: '2.6.3'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.6.3'
+	compileOnly group: 'org.projectlombok', name: 'lombok', version:'1.18.22'
+	annotationProcessor group: 'org.projectlombok', name: 'lombok', version:'1.18.22'
+	implementation group: 'org.apache.commons', name: 'commons-text', version:'1.9'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.3'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.3'
-	runtimeOnly 'org.postgresql:postgresql:42.3.2'
-	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.3'
-	implementation 'org.springframework.security:spring-security-test:5.5.1'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
-	testImplementation 'org.hamcrest:hamcrest:2.2'
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+	implementation group: 'com.fasterxml.uuid', name: 'java-uuid-generator', version: '4.0.1'
+	developmentOnly group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.6.3'
+	runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.3.2'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.6.3'
+	implementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.5.1'
+	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: ':2.6.3'
+	testImplementation group: 'org.hamcrest', name:'hamcrest', version: '2.2'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
+	testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
 }
 
 tasks.named('test') {
